# memchr_vs_stringzilla

./: Cargo.toml  README.md  bench.rs  bench1m.sh  mm.rs  sz.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: memmem_find.rs  sz_find.rs
src/: lib.rs
