[package]
name = "sz_rust_bench"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }
memchr = { version = "2.7.1", default-features = false }
stringzilla = { git = "https://github.com/ashvardanian/stringzilla.git", rev = "663a633082e20f41052e2d6a6d9766dd061c9445" }
